# work_cpp

./: README.md  readme.md
server/: .gitignore  CMakeLists.txt
server/cmake/: compile_grpc_proto.cmake  find_grpc.cmake
server/src/: server.cpp
server/src/api/: api_chat.proto  chat_api.h  chat_api_chat_fetch.cpp  chat_api_login.cpp  chat_api_message_fetch.cpp  chat_api_message_send.cpp
server/src/database/: database.cpp  database.h
server/src/logic/: chat_manager.cpp  chat_manager.h  user_manager.cpp  user_manager.h
ui/: maininterface.ui
ui/communication/: .gitignore  chat.cpp  chat.h  chat.ui  communication.pro  emoj.cpp  emoj.h  emoj.ui  images.qrc  invite_join_group.cpp  invite_join_group.h  invite_join_group.ui  new_friends_group.cpp  new_friends_group.h  new_friends_group.ui  temp_code.cpp  widget.cpp  widget.h  widget.ui
